--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
     <header>
       <nav class="navbar bg-dark border-bottom border-body" data-bs-theme="dark">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">Home</a>
-          <img src="Be e-com.png" alt="Logo">
+          <img src="Be_e-com__1_-removebg-preview.png" alt="Logo">
+          <a class="navbar-brand" href="#">Be e-com</a>
+          <a href=""><span>Back-office Page</span></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
