--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="container-fluid">
           <img src="Be_e-com__1_-removebg-preview.png" alt="Logo">
           <a class="navbar-brand" href="#">Be e-com</a>
-          <a href=""><span>Back-office Page</span></a>
+          <a href="Backoffice.html"><span>Back-office Page</span></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
