--- a/index.html
+++ b/index.html
@@ -48,9 +48,13 @@
         </div>
       </nav>
     </header>
-    <main></main>
+    <main>
+      <div id="contenitore">
+
+      </div>
+    </main>
     <footer></footer>
-    <script></script>
+    <script src="index.js"></script>
 </body>
 </html>
 
