--- a/index.html
+++ b/index.html
@@ -49,11 +49,21 @@
       </nav>
     </header>
     <main>
-      <div id="contenitore">
-
+      <section id ="contenitore"></section>
+        <div id="shoppingResults" class="container">
+          <h1 id="carrelloTitle" class="m-5 lead">Carrello:</h1>
+          <div id="Carrello"></div>
       </div>
     </main>
     <footer></footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+    integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
+    crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
+    integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
+    crossorigin="anonymous"></script>
+
     <script src="index.js"></script>
 </body>
 </html>
