--- a/Backoffice.html
+++ b/Backoffice.html
@@ -49,6 +49,15 @@
           </nav>
     </header>
     <main>
+
+      <div class="input-group mx-1 my-4">
+        <input type="text" id="" class="form-control" aria-describedby="button-addon2" placeholder="Name">
+        <input type="text" id="" class="form-control" aria-describedby="button-addon2" placeholder="Description">
+        <input type="text" id="" class="form-control" aria-describedby="button-addon2" placeholder="Brand">
+        <input type="text" id="" class="form-control" aria-describedby="button-addon2" placeholder="Price">
+        <button class="btn btn-outline-secondary" type="button" id="button-addon2">Create Post</button>
+      </div>
+
         <table class="table table-bordered mt-5">
             <thead>
               <tr>
@@ -73,5 +82,6 @@
 
     <script src="index.js"></script>
     <script src="Backoffice.js"></script>
+    <script src="Post.Edit.Delete.js"></script>
 </body>
 </html>
