--- a/PaginaProdotto.html
+++ b/PaginaProdotto.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pagina Prodotto</title>
+    <link rel="stylesheet" href="bootstrap.css">
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
@@ -47,7 +48,13 @@
             </div>
           </nav>
     </header>
-    <main></main>
+    <main>
+      <div class="container-fluid">
+        <div class="row justify-content-center" id="ProductBox">
+
+        </div>
+    </div>
+    </main>
     <footer></footer>
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
@@ -57,6 +64,7 @@
     integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
     crossorigin="anonymous"></script>
 
-    <script src="index.js"></script>>
+    <script src="index.js"></script>
+    <script src="PaginaProdotto.js"></script>
 </body>
 </html>
