--- a/Backoffice.html
+++ b/Backoffice.html
@@ -49,13 +49,16 @@
           </nav>
     </header>
     <main>
-
+        <div class="alert alert-warning d-none" role="alert" id="alertMessage">
+            <i class="fa-solid fa-circle-exclamation me-2"></i>
+            <span>Devi inserire tutti e 3 i campi obbligatori!</span>
+        </div>
       <div class="input-group mx-1 my-4">
-        <input type="text" id="" class="form-control" aria-describedby="button-addon2" placeholder="Name">
-        <input type="text" id="" class="form-control" aria-describedby="button-addon2" placeholder="Description">
-        <input type="text" id="" class="form-control" aria-describedby="button-addon2" placeholder="Brand">
-        <input type="text" id="" class="form-control" aria-describedby="button-addon2" placeholder="Price">
-        <button class="btn btn-outline-secondary" type="button" id="button-addon2">Create Post</button>
+        <input type="text" id="post-name" class="form-control" aria-describedby="button-addon2" placeholder="Name">
+        <input type="text" id="post-description" class="form-control" aria-describedby="button-addon2" placeholder="Description">
+        <input type="text" id="post-brand" class="form-control" aria-describedby="button-addon2" placeholder="Brand">
+        <input type="text" id="post-price" class="form-control" aria-describedby="button-addon2" placeholder="Price">
+        <button class="btn btn-outline-secondary" type="button" id="button-addon2" onclick="createPost()">Create Post</button>
       </div>
 
         <table class="table table-bordered mt-5">
@@ -65,6 +68,7 @@
                 <th class="table-dark" scope="col">Description</th>
                 <th class="table-dark" scope="col">Brand</th>
                 <th class="table-dark" scope="col">Price</th>
+                <th class="table-dark" scope="col">Action</th>
               </tr>
             </thead>
             <tbody id="riga">
