--- a/PaginaProdotto.html
+++ b/PaginaProdotto.html
@@ -12,7 +12,7 @@
         <nav class="navbar bg-dark border-bottom border-body" data-bs-theme="dark">
             <div class="container-fluid">
               <img src="Be_e-com__1_-removebg-preview.png" alt="Logo">
-              <a class="navbar-brand" href="#">Be e-com</a>
+              <a class="navbar-brand" href="index.html">Be e-com</a>
               <a href="Backoffice.html"><span>Back-office Page</span></a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -64,7 +64,6 @@
     integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
     crossorigin="anonymous"></script>
 
-    <script src="index.js"></script>
     <script src="PaginaProdotto.js"></script>
 </body>
 </html>
