--- a/PaginaProdotto.html
+++ b/PaginaProdotto.html
@@ -49,7 +49,7 @@
           </nav>
     </header>
     <main>
-      <div class="container-fluid">
+      <div class="container-fluid" style="max-width: 40rem;">
         <div class="row justify-content-center" id="ProductBox">
 
         </div>
